--- a/index.html
+++ b/index.html
@@ -13,21 +13,33 @@
             <div class="font-medium text-5xl">
                <h1>TechShed</h1>
             </div>
-            <div class="flex gap-5 item-centre">
-                <i class="fa-solid fa-magnifying-glass mt-1 text-2xl"></i>
+            <div class="flex gap-7 item-centre">
+                <i class="fa-solid fa-magnifying-glass mt-1 text-2xl hover:cursor-pointer"></i>
                 <div class="flex gap-2">
-                    <i class="fa-solid fa-circle-user mt-1 text-2xl"></i>
-                    <h1 class="mt-1 text-2xl">Log In</h1>
+                    <i class="fa-solid fa-circle-user mt-1 text-2xl hover:cursor-pointer"></i>
+                    <h1 class="mt-1 text-2xl hover:cursor-pointer">Log In</h1>
                 </div>
                 <div>
-                    <i class="fa-regular fa-heart mt-1 text-2xl text-"></i>
+                    <i class="fa-regular fa-heart mt-1 text-2xl hover:cursor-pointer"></i>
                 </div>
                 <div class="flex gap-2">
-                    <i class="fa-solid fa-cart-shopping mt-1 text-2xl"></i>
-                    <h1 class="mt-1 text-2xl bg-black-700">1</h1>
+                    <i class="fa-solid fa-cart-shopping mt-1 text-2xl hover:cursor-pointer"></i>
+                    <h1 class="mt-1 text-l bg-black-700 hover:cursor-pointer">1</h1>
                 </div>
             </div>
         </nav>
+        <di class="flex gap-10 text-l font-extralight bg-gray-300 p-4">
+            <h1 class="hover:text-purple-600 cursor-pointer">Shop All</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Computers</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Tablets</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Drones&Cameras</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Audio</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Mobile</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">T.V&Home Cinema</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Wearable Tech</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Sale</h1>
+        </di>
     </div>
 </body>
 </html>
+
