--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             <h1 class="hover:text-purple-600 cursor-pointer">Sale</h1>
         </di>
     </div>
+    <div class = "relative">
+        <i class="fa-regular fa-comment-dots fixed bottom-7 right-5 text-3xl text-white rounded-full bg-red-500 px-3 py-2 cursor-pointer"></i>
+    </div>
+    <div>
+        <img src="https://static.wixstatic.com/media/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png/v1/fill/w_1225,h_706,al_r,q_90,usm_0.66_1.00_0.01,enc_avif,quality_auto/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png" class = "w-full">  
+    </div>
 </body>
 </html>
 
