--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <h1 class="hover:text-purple-600 cursor-pointer">Shop All</h1>
             <h1 class="hover:text-purple-600 cursor-pointer">Computers</h1>
             <h1 class="hover:text-purple-600 cursor-pointer">Tablets</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Drones&Cameras</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">Drones & Cameras</h1>
             <h1 class="hover:text-purple-600 cursor-pointer">Audio</h1>
             <h1 class="hover:text-purple-600 cursor-pointer">Mobile</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">T.V&Home Cinema</h1>
+            <h1 class="hover:text-purple-600 cursor-pointer">T.V & Home Cinema</h1>
             <h1 class="hover:text-purple-600 cursor-pointer">Wearable Tech</h1>
             <h1 class="hover:text-purple-600 cursor-pointer">Sale</h1>
         </di>
@@ -45,6 +45,15 @@
     </div>
     <div>
         <img src="https://static.wixstatic.com/media/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png/v1/fill/w_1225,h_706,al_r,q_90,usm_0.66_1.00_0.01,enc_avif,quality_auto/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png" class = "w-full">  
+        <div class="absolute top-0 right-0 left-10 bottom-0 flex items-center ml-10 mb-10 bottom-10 left-10">
+            <h1 class="px-3 bg-red-500 text-centre text-white font-extralight text-2xl">Best Prices</h1>
+        </div>
+        <div class="absolute top-20 right-0 left-20 bottom-0 flex items-center">
+            <h1 class="text-7xl font-medium ">Incredible Prices on All Your Favorite Items</h1>
+        </div>
+        <div class="absolute inset-0 flex items-center ml-10 mt-20 left-10">
+            <h1 class="font-light">Get more for less on selected brands</h1>
+        </div>
     </div>
 </body>
 </html>
