--- a/index.html
+++ b/index.html
@@ -8,94 +8,99 @@
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <body>
-    <div>
-        <nav class="flex justify-between p-7">
-            <div class="font-medium text-5xl">
-               <h1>TechShed</h1>
+    <div class="bg-gray-200">
+        <div>
+            <nav class="flex justify-between p-7">
+                <div class="font-medium text-5xl">
+                <h1>TechShed</h1>
+                </div>
+                <div class="flex gap-7 item-centre">
+                    <i class="fa-solid fa-magnifying-glass mt-1 text-2xl hover:cursor-pointer"></i>
+                    <div class="flex gap-2">
+                        <i class="fa-solid fa-circle-user mt-1 text-2xl hover:cursor-pointer"></i>
+                        <h1 class="mt-1 text-2xl hover:cursor-pointer">Log In</h1>
+                    </div>
+                    <div>
+                        <i class="fa-regular fa-heart mt-1 text-2xl hover:cursor-pointer"></i>
+                    </div>
+                    <div class="flex gap-2">
+                        <i class="fa-solid fa-cart-shopping mt-1 text-2xl hover:cursor-pointer"></i>
+                        <h1 class="mt-1 text-l bg-black-700 hover:cursor-pointer">1</h1>
+                    </div>
+                </div>
+            </nav>
+            <div class="flex gap-10 text-l font-extralight bg-gray-300 p-4">
+                <h1 class="hover:text-purple-600 cursor-pointer">Shop All</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Computers</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Tablets</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Drones & Cameras</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Audio</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Mobile</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">T.V & Home Cinema</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Wearable Tech</h1>
+                <h1 class="hover:text-purple-600 cursor-pointer">Sale</h1>
             </div>
-            <div class="flex gap-7 item-centre">
-                <i class="fa-solid fa-magnifying-glass mt-1 text-2xl hover:cursor-pointer"></i>
-                <div class="flex gap-2">
-                    <i class="fa-solid fa-circle-user mt-1 text-2xl hover:cursor-pointer"></i>
-                    <h1 class="mt-1 text-2xl hover:cursor-pointer">Log In</h1>
-                </div>
-                <div>
-                    <i class="fa-regular fa-heart mt-1 text-2xl hover:cursor-pointer"></i>
-                </div>
-                <div class="flex gap-2">
-                    <i class="fa-solid fa-cart-shopping mt-1 text-2xl hover:cursor-pointer"></i>
-                    <h1 class="mt-1 text-l bg-black-700 hover:cursor-pointer">1</h1>
-                </div>
-            </div>
-        </nav>
-        <di class="flex gap-10 text-l font-extralight bg-gray-300 p-4">
-            <h1 class="hover:text-purple-600 cursor-pointer">Shop All</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Computers</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Tablets</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Drones & Cameras</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Audio</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Mobile</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">T.V & Home Cinema</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Wearable Tech</h1>
-            <h1 class="hover:text-purple-600 cursor-pointer">Sale</h1>
-        </di>
-    </div>
-    <div class = "relative">
-        <i class="fa-regular fa-comment-dots fixed bottom-7 right-5 text-3xl text-white rounded-full bg-red-500 px-3 py-2 cursor-pointer"></i>
-    <div>
-        <img src="https://static.wixstatic.com/media/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png/v1/fill/w_1225,h_706,al_r,q_90,usm_0.66_1.00_0.01,enc_avif,quality_auto/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png" class = "w-[1800px] h-[865px]">  
-        <div class="absolute top-[100px] left-60 flex items-center">
-            <h1 class="px-3 bg-red-600 text-centre text-white font-extralight text-2xl">Best Prices</h1>
         </div>
-        <div class="absolute top-40 left-60  flex items-center">
-            <h1 class="text-7xl font-semibold leading-[1.5]">Incredible Prices <br> on All Your <br> Favorite Items</h1>
-        </div>
-        <div class="absolute top-[500px] left-[250px] flex items-center">
-            <h1 class="font-extralight text-2xl">Get more for less on selected brands</h1>
-        </div>
-        <div class="absolute top-[600px] left-[250px] flex items-center">
-            <button class="text-white text-xl font-extralight bg-violet-600 px-[80px] py-[15px] rounded-3xl">Shop Now</button>
-        </div>
-    </div>
-    </div>
-    <div class = "relative">
-        <div class="m-[50px]">
-            <div class="flex gap-10">
-                <img src="Images/c22c23_e140bfa8cd6f4cb2ac5ee6e204f64073~mv2.avif" class = "w-[830px] h-[600px]"> 
-                <img src="Images/c837a6_d84a631864a442a496670bc2d787c6a0~mv2.avif" class = "w-[830px] h-[600px]"> 
-            </div>
-            <div class="bg-zinc-300 flex">
-                <div>
-                    <div class="absolute top-[100px] left-[140px] flex items-center">
-                    <h1 class="px-3 text-centre text-white font-extralight text-2xl">Holiday Deals</h1>
-                    </div>
-                    <div class="absolute top-40 left-[150px]  flex items-center">
-                        <h1 class="text-7xl text-white font-medium leading-[1]">Up to <br>30% off</h1>
-                    </div>
-                    <div class="absolute top-[330px] left-[150px] flex items-center">
-                        <h1 class="font-extralight text-white text-2xl tracking-wider">Selected Smartphone Brands</h1>
-                    </div>
-                    <div class="absolute top-[400px] left-[150px] flex items-center">
-                        <button class="text-xl font-extralight bg-neutral-100 px-[60px] py-[10px] rounded-3xl hover:bg-transparent hover:border-2 hover:border-white hover:text-white">Shop</button>
-                    </div>
+        <div class = "relative">
+            <i class="fa-regular fa-comment-dots fixed bottom-7 right-5 text-3xl text-white rounded-full bg-red-500 px-3 py-2 cursor-pointer"></i>
+            <div>
+                <img src="https://static.wixstatic.com/media/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png/v1/fill/w_1225,h_706,al_r,q_90,usm_0.66_1.00_0.01,enc_avif,quality_auto/c837a6_f58829a26e594ca3aa72383e19cf39b9~mv2.png" class = "w-[1800px] h-[865px]">  
+                <div class="absolute top-[100px] left-60 flex items-center">
+                    <h1 class="px-3 bg-red-600 text-centre text-white font-extralight text-2xl">Best Prices</h1>
                 </div>
-                <div>
-                    <div class="absolute top-[100px] left-[990px] flex items-center">
-                        <h1 class="px-3 text-centre text-white font-extralight text-2xl">Just In</h1>
-                    </div>
-                    <div class="absolute top-40 left-[1000px]  flex items-center">
-                        <h1 class="text-7xl text-white font-medium leading-[1]">Take Your <br> Sound <br> Anywhere</h1>
-                    </div>
-                    <div class="absolute top-[390px] left-[1000px] flex items-center">
-                        <h1 class="font-extralight text-white text-2xl tracking-wider">Top Headphone Brands</h1>
-                    </div>
-                    <div class="absolute top-[450px] left-[1000px] flex items-center">
-                        <button class="text-xl font-extralight bg-neutral-100 px-[60px] py-[10px] rounded-3xl hover:bg-transparent hover:border-2 hover:border-white hover:text-white">Shop</button>
-                    </div>
+                <div class="absolute top-40 left-60  flex items-center">
+                    <h1 class="text-7xl font-semibold leading-[1.5]">Incredible Prices <br> on All Your <br> Favorite Items</h1>
+                </div>
+                <div class="absolute top-[500px] left-[250px] flex items-center">
+                    <h1 class="font-extralight text-2xl">Get more for less on selected brands</h1>
+                </div>
+                <div class="absolute top-[600px] left-[250px] flex items-center">
+                    <button class="text-white text-xl font-extralight bg-violet-600 px-[80px] py-[15px] rounded-3xl">Shop Now</button>
                 </div>
             </div>
-             <i class="fa-regular fa-comment-dots fixed bottom-7 right-5 text-3xl text-white rounded-full bg-red-500 px-3 py-2 cursor-pointer"></i>
-    </div>
+        </div>
+        <div class = "relative">
+            <div class="m-[50px]">
+                <div class="flex gap-10">
+                    <img src="Images/c22c23_e140bfa8cd6f4cb2ac5ee6e204f64073~mv2.avif" class = "w-[830px] h-[600px]"> 
+                    <img src="Images/c837a6_d84a631864a442a496670bc2d787c6a0~mv2.avif" class = "w-[830px] h-[600px]"> 
+                </div>
+                <div class="bg-zinc-300 flex">
+                    <div>
+                        <div class="absolute top-[100px] left-[140px] flex items-center">
+                        <h1 class="px-3 text-centre text-white font-extralight text-2xl">Holiday Deals</h1>
+                        </div>
+                        <div class="absolute top-40 left-[150px]  flex items-center">
+                            <h1 class="text-7xl text-white font-medium leading-[1]">Up to <br>30% off</h1>
+                        </div>
+                        <div class="absolute top-[330px] left-[150px] flex items-center">
+                            <h1 class="font-extralight text-white text-2xl tracking-wider">Selected Smartphone Brands</h1>
+                        </div>
+                        <div class="absolute top-[400px] left-[150px] flex items-center">
+                            <button class="text-xl font-extralight bg-neutral-100 px-[60px] py-[10px] rounded-3xl hover:bg-transparent hover:border-2 hover:border-white hover:text-white">Shop</button>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="absolute top-[100px] left-[990px] flex items-center">
+                            <h1 class="px-3 text-centre text-white font-extralight text-2xl">Just In</h1>
+                        </div>
+                        <div class="absolute top-40 left-[1000px]  flex items-center">
+                            <h1 class="text-7xl text-white font-medium leading-[1]">Take Your <br> Sound <br> Anywhere</h1>
+                        </div>
+                        <div class="absolute top-[390px] left-[1000px] flex items-center">
+                            <h1 class="font-extralight text-white text-2xl tracking-wider">Top Headphone Brands</h1>
+                        </div>
+                        <div class="absolute top-[450px] left-[1000px] flex items-center">
+                            <button class="text-xl font-extralight bg-neutral-100 px-[60px] py-[10px] rounded-3xl hover:bg-transparent hover:border-2 hover:border-white hover:text-white">Shop</button>
+                        </div>
+                    </div>
+                </div>
+                <i class="fa-regular fa-comment-dots fixed bottom-7 right-5 text-3xl text-white rounded-full bg-red-500 px-3 py-2 cursor-pointer"></i>
+            </div>
+        </div>
+        <div class="w-[1700px] h-[200px] bg-white m-[50px]">
+            <h1>Curb-side <br> pickup</h1>
+        </div>
     </div>
 </body>
 </html>
